tests/error/11_reassign_var.py
# Re-assigning variable with mismatched type
# Type Checker Error: Assignment type mismatch. RHS should be Type<str> instead of Type<int>.
a: str = 'hi'
a = 1
